// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultTreeItemRenderer should render correctly as a link with the provided props 1`] = `
<li
  className="rmd-tree-item"
  role="none"
>
  <a
    aria-level={2}
    aria-posinset={2}
    aria-setsize={1}
    className="rmd-tree-item__content rmd-tree-item__content--link rmd-list-item rmd-list-item--stateful rmd-states--simple"
    disabled={false}
    href="/"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
    role="treeitem"
    tabIndex={-1}
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </a>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly as a link with the provided props 2`] = `
<li
  className="rmd-tree-item"
  role="none"
>
  <a
    aria-expanded="true"
    aria-level={2}
    aria-posinset={2}
    aria-setsize={1}
    className="rmd-tree-item__content rmd-tree-item__content--link rmd-list-item rmd-list-item--stateful rmd-states--simple"
    disabled={false}
    href="/"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
    role="treeitem"
    tabIndex={-1}
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </a>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly as a link with the provided props 3`] = `
<li
  className="rmd-tree-item"
  role="none"
>
  <a
    aria-level={2}
    aria-posinset={2}
    aria-setsize={1}
    className="rmd-tree-item__content rmd-tree-item__content--link rmd-list-item rmd-list-item--stateful rmd-states--simple rmd-states--selected"
    disabled={false}
    href="/"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
    role="treeitem"
    tabIndex={0}
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </a>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly as a link with the provided props 4`] = `
<li
  className="rmd-tree-item"
  role="none"
>
  <a
    aria-expanded="true"
    aria-level={2}
    aria-posinset={2}
    aria-setsize={1}
    className="rmd-tree-item__content rmd-tree-item__content--link rmd-list-item rmd-list-item--stateful rmd-states--simple rmd-states--selected"
    disabled={false}
    href="/"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
    role="treeitem"
    tabIndex={0}
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </a>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly with the provided props 1`] = `
<li
  aria-level={2}
  aria-posinset={2}
  aria-setsize={1}
  className="rmd-tree-item"
  role="treeitem"
  tabIndex={-1}
>
  <div
    className="rmd-tree-item__content rmd-list-item rmd-list-item--stateful rmd-states--simple"
    disabled={false}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </div>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly with the provided props 2`] = `
<li
  aria-expanded="true"
  aria-level={2}
  aria-posinset={2}
  aria-setsize={1}
  className="rmd-tree-item"
  role="treeitem"
  tabIndex={-1}
>
  <div
    className="rmd-tree-item__content rmd-list-item rmd-list-item--stateful rmd-states--simple"
    disabled={false}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </div>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly with the provided props 3`] = `
<li
  aria-level={2}
  aria-posinset={2}
  aria-setsize={1}
  className="rmd-tree-item"
  role="treeitem"
  tabIndex={0}
>
  <div
    className="rmd-tree-item__content rmd-list-item rmd-list-item--stateful rmd-states--simple rmd-states--selected"
    disabled={false}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </div>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly with the provided props 4`] = `
<li
  aria-expanded="true"
  aria-level={2}
  aria-posinset={2}
  aria-setsize={1}
  className="rmd-tree-item"
  role="treeitem"
  tabIndex={0}
>
  <div
    className="rmd-tree-item__content rmd-list-item rmd-list-item--stateful rmd-states--simple rmd-states--selected"
    disabled={false}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </div>
</li>
`;
